
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int gchar ;
typedef int gboolean ;
typedef int GaimConversation ;


 int GAIM_CMD_STATUS_OK ;
 int GAIM_CONV_IM (int *) ;
 int code ;
 int gaim_conv_im_send (int ,int ) ;

gboolean go(GaimConversation *conv, const gchar *cmd, gchar **args, gchar **error, void *data)
{
       gaim_conv_im_send(GAIM_CONV_IM(conv), code);

       return GAIM_CMD_STATUS_OK;
}
