; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_999.c_go.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_999.c_go.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@code = common dso_local global i32 0, align 4
@GAIM_CMD_STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @go(i32* %0, i32* %1, i32** %2, i32** %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i32** %3, i32*** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @GAIM_CONV_IM(i32* %11)
  %13 = load i32, i32* @code, align 4
  %14 = call i32 @gaim_conv_im_send(i32 %12, i32 %13)
  %15 = load i32, i32* @GAIM_CMD_STATUS_OK, align 4
  ret i32 %15
}

declare dso_local i32 @gaim_conv_im_send(i32, i32) #1

declare dso_local i32 @GAIM_CONV_IM(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
